Code refactoring for commons/; Added docs for ZBox Wiki in markdown.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,19 @@
 *.pyc
 *.pyo
-build/
-dist/
+*.html
 .DS_Store
 .hg
 .hgignore
-TODO.md
-.idea
-pages
-.ropeproject
-docs/*.html
-sessions/*
-*.html
-docs/*.html
-scripts/conf.py
 t.py
-experimental/migrate_from_trac_wiki_to_zwiki_conf.py
 error_log.txt
 info_log.txt
+pages
+TODO.md
+build/
+dist/
+.idea/
+.ropeproject/
+ignore/
+sessions/
+scripts/conf.py
+experimental/migrate_from_trac_wiki_to_zwiki_conf.py
