Fixed it doesn't works if optional modules not found; Added zbox_wiki/other_pages into ignore filter; Added zbox_wiki/static/pages into ignore filter.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ ignore/
 sessions/
 scripts/conf.py
 experimental/migrate_from_trac_wiki_to_zwiki_conf.py
+zbox_wiki/other_pages
+zbox_wiki/static/pages
