Fixed /static/* not found while run it in instance mode.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,10 @@
 *.pyc
-*.pyo
-*.html
 .DS_Store
-.hg
-.hgignore
-t.py
-error_log.txt
-info_log.txt
-pages/
 TODO.md
+MANIFEST
 build/
 dist/
 .idea/
 .ropeproject/
 ignore/
-sessions/
-scripts/conf.py
-experimental/migrate_from_trac_wiki_to_zwiki_conf.py
+experimental/
