Small changed, update git filter.

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,7 @@ dist/
 ignore/
 *.egg-info/
 experimental/
-zbox_wiki/pages/zbox-wiki/*.png
 zbox_wiki/sessions/
+zbox_wiki/pages/zbox-wiki/*.png
+zbox_wiki/pages/.zw_all_pages_list_cache
+zbox_wiki/pages/.zw_recent_changes_cache
