--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ dist/
 ignore/
 *.egg-info/
 experimental/
+zbox_wiki/static/pages
 zbox_wiki/sessions/
 zbox_wiki/pages/zbox-wiki/*.png
 zbox_wiki/pages/.zw_all_pages_list_cache
