--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,12 @@
-include scripts/*.py
-include zbox_wiki/templates/*.tpl
+include zbox_wiki/pages/robots.txt
+include zbox_wiki/pages/zbox-wiki/*.md
+include zbox_wiki/pages/zbox-wiki/nginx-*.conf
+include zbox_wiki/scripts/*.py
+include zbox_wiki/scripts/*.sh
 include zbox_wiki/static/css/*.css
 include zbox_wiki/static/js/*.js
 include zbox_wiki/static/js/prettify/*.js
 include zbox_wiki/static/js/prettify/*.css
-include zbox_wiki/pages/robots.txt
-include zbox_wiki/pages/zbox-wiki/*.md
-include zbox_wiki/pages/zbox-wiki/nginx.conf
+include zbox_wiki/templates/*.tpl
 include LICENSE.txt
 include README.md
